fixing transition to avoid page flicker

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
+/* Disable transitions initially */
+.no-transition * {
+  transition: none;
+}
+
 * {
   // base styling
   margin: 0;
